--- a/inputConfig.json
+++ b/inputConfig.json
@@ -1,14 +1,14 @@
 {
-    "orgName" : "orgName",
-    "projectName" : "projectName",
+    "orgName" : "domain-inc",
+    "projectName" : "rt-subsurface-analysis",
     "environment"  : "dev",
-    "regionName" : "regionName",
-    "resoureName" :  "resoureName",
-    "creator" : "creator@domain.com",
+    "regionName" : "us-east-1",
+    "resoureName" :  "subsurface",
+    "creator" : "info@domain.com",
     "stackName": "rt-subsurface-analysis",
     "stackTerminationProtection": true,
     "stackDescription": "Deploy AWS Keyspaces (for Apache Cassandra) for Drilling, Reservoir & Production Applications.",
-    "stackTemplateBodyFileName" : "aws-keyspace-cassandra.yaml",
+    "stackTemplateBodyFileName" : "keyspace.yaml",
     "stackTemplateURL" : "bucketName - this is an alternative to 'stackTemplateBody'",
     "credentials" : "credentials.json",
     "createResources" : true,
