--- a/inputConfig.json
+++ b/inputConfig.json
@@ -5,7 +5,7 @@
     "regionName" : "us-east-1",
     "resoureName" :  "subsurface",
     "creator" : "info@domain.com",
-    "stackName": "rt-subsurface-analysis",
+    "stackName": "rt-subsurface-analysis-dev",
     "stackTerminationProtection": true,
     "stackDescription": "Deploy AWS Keyspaces (for Apache Cassandra) for Drilling, Reservoir & Production Applications.",
     "stackTemplateBodyFileName" : "keyspace.yaml",
