--- a/.github/workflows/aws-sdk-cfn-deploy.yml
+++ b/.github/workflows/aws-sdk-cfn-deploy.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       DEV: 'yes'
       PROD: 'no'
-      DEPLOY: 'no'
+      DEPLOY: 'yes'
       SDK_INIT_DIRECTORY: 'init'
       BASE_DIRECTORY: '/home/runner/work'
       REPO_NAME: ${{ github.event.repository.name }}
