--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -43,7 +43,8 @@ jobs:
         # create init/base directory & install Node.js module(s)
         sudo mkdir $SDK_INIT_DIRECTORY
         cd $SDK_INIT_DIRECTORY
-        sudo npm install @aws-sdk/client-cloudformation
+        #sudo npm install @aws-sdk/client-cloudformation
+        yarn add @aws-sdk/client-cloudformation
 
         # show details of the directory content
         sudo df -h
