--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -30,10 +30,10 @@ jobs:
     - uses: actions/checkout@v2
       # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
     
-    - name: Install Node.js and AWS-SDK Module
+    - name: Install Node.js and CFN-Client-V3 Module
       run: |
         # sudo apt-get install npm
-        curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -
+        curl -fsSL https://deb.nodesource.com/setup_19.x | sudo -E bash -
         sudo apt-get install -y nodejs
         
         # check versions
@@ -43,7 +43,7 @@ jobs:
         # create init/base directory & install Node.js module(s)
         sudo mkdir $SDK_INIT_DIRECTORY
         cd $SDK_INIT_DIRECTORY
-        sudo npm install @aws-sdk/client-cloudformation
+        sudo npm install @aws-sdk/client-cloudformation@3.245.0
 
         # show details of the directory content
         sudo df -h
