--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -40,10 +40,11 @@ jobs:
         sudo node -v
         sudo npm -v
         
-        # create init/base directory & install Node.js module(s)
+        # create init/base directory & install Node.js module(s) & list install module(s)
         sudo mkdir $SDK_INIT_DIRECTORY
         cd $SDK_INIT_DIRECTORY
-        sudo npm install @aws-sdk/client-cloudformation
+        sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME/$SDK_INIT_DIRECTORY @aws-sdk/client-cloudformation
+        sudo npm ls
 
         # show details of the directory content
         sudo df -h
@@ -54,11 +55,11 @@ jobs:
       if:  (env.DEPLOY == 'yes' &&  env.DEV == 'yes')
       run: |
         sudo mv index-dev.js index.js 
-        sudo node index.js
+        sudo node $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME/$SDK_INIT_DIRECTORY/index.js
         
     - name: DEPLOY - Prod
       if:  (env.DEPLOY == 'yes' && env.PROD == 'yes' )
       run: |
         sudo mv index-prod.js index.js 
-        sudo node index.js
+        sudo node $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME/$SDK_INIT_DIRECTORY/index.js
 
