--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -49,11 +49,12 @@ jobs:
     - name: DEPLOY - Dev
       if:  (env.DEPLOY == 'yes' &&  env.DEV == 'yes')
       run: |
-        export AWS_REGION=${{ secrets.AWS_REGION }}
-        echo region is: $AWS_REGION 
+        sudo export AWS_REGION=${{ secrets.AWS_REGION }}
+        sudo export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+        sudo export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
         pwd
-        sudo mv index-dev.js index.js 
-        sudo node index.js
+        #sudo mv index-dev.js index.js 
+        sudo node index-dev.js
         
     - name: DEPLOY - Prod
       if:  (env.DEPLOY == 'yes' && env.PROD == 'yes' )
