--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -53,8 +53,8 @@ jobs:
         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
         pwd
-        #sudo mv index-dev.js index.js 
-        sudo node index-dev.js
+        sudo mv index-dev.js index.js 
+        sudo node index.js
         
     - name: DEPLOY - Prod
       if:  (env.DEPLOY == 'yes' && env.PROD == 'yes' )
