--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -30,11 +30,11 @@ jobs:
     - uses: actions/checkout@v2
       # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
       
-    - name: Install Node.js v14.x & CFN-Client-V3 Module
+    - name: Install Node.js & CFN-Client-V3 Module
       run: |
         # install
         sudo apt-get -y update
-        curl -fsSL https://deb.nodesource.com/setup_19.x | sudo -E bash -
+        curl -fsSL https://deb.nodesource.com/setup_14.x | sudo -E bash -
         sudo apt-get install -y nodejs
         sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME @aws-sdk/client-cloudformation
         
