--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -34,11 +34,13 @@ jobs:
       run: |
         # install
         sudo apt-get -y update
-        curl -fsSL https://deb.nodesource.com/setup_14.x | sudo -E bash -
+        curl -fsSL https://deb.nodesource.com/setup_19.x | sudo -E bash -
         sudo apt-get install -y nodejs
+        sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME aws-sdk
         sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME @aws-sdk/client-cloudformation
         
         # check versions & show directory's contents and details
+        pwd
         sudo node -v
         sudo npm -v
         sudo npm ls
