--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -20,7 +20,7 @@ jobs:
       REPO_NAME: ${{ github.event.repository.name }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_REGION: "us-east-1"
+      AWS_REGION: "US-EAST-1"
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     defaults:
@@ -41,13 +41,20 @@ jobs:
         
         # check versions & show directory's contents and details
         pwd
-        echo "my region is:" + env.AWS_REGION
         sudo node -v
         sudo npm -v
         sudo npm ls
         sudo df -h
         sudo free -h 
         sudo ls -ltr
+        
+        #
+        AWS_REGION=$AWS_REGION
+        AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+        AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+        export AWS_REGION
+        export AWS_ACCESS_KEY_ID
+        export AWS_SECRET_ACCESS_KEY
         
     - name: DEPLOY - Dev
       if:  (env.DEPLOY == 'yes' &&  env.DEV == 'yes')
