--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -19,8 +19,7 @@ jobs:
       BASE_DIRECTORY: '/home/runner/work'
       REPO_NAME: ${{ github.event.repository.name }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_REGION: "US-EAST-1"
+      AWS_REGION: ${{ secrets.AWS_REGION }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     defaults:
@@ -47,14 +46,6 @@ jobs:
         sudo df -h
         sudo free -h 
         sudo ls -ltr
-        
-        #
-        AWS_REGION=$AWS_REGION
-        AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
-        AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
-        export AWS_REGION
-        export AWS_ACCESS_KEY_ID
-        export AWS_SECRET_ACCESS_KEY
         
     - name: DEPLOY - Dev
       if:  (env.DEPLOY == 'yes' &&  env.DEV == 'yes')
