--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -13,8 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     environment: development
     env:
-      DEV: 'yes'
-      PROD: 'no'
       DEPLOY: 'yes'
       SDK_INIT_DIRECTORY: 'init'
       BASE_DIRECTORY: '/home/runner/work'
@@ -49,7 +47,7 @@ jobs:
         sudo ls -ltr
         
     - name: DEPLOY - Dev
-      if:  (env.DEPLOY == 'yes' &&  env.DEV == 'yes')
+      if:  (env.DEPLOY == 'yes')
       run: |
         pwd
         sudo mv index-dev.js index.js 
@@ -57,13 +55,12 @@ jobs:
         
         
   aws-sdk-js-v3-prod:
+    needs: aws-sdk-js-v3-dev
     name: AWS-SDK-JS-V3-Deploy-CFN-Prod
     runs-on: ubuntu-latest
     environment: production
     env:
-      DEV: 'yes'
-      PROD: 'no'
-      DEPLOY: 'yes'
+      DEPLOY: 'no'
       SDK_INIT_DIRECTORY: 'init'
       BASE_DIRECTORY: '/home/runner/work'
       REPO_NAME: ${{ github.event.repository.name }}
@@ -96,17 +93,9 @@ jobs:
         sudo free -h 
         sudo ls -ltr
         
-    - name: DEPLOY - Dev
-      if:  (env.DEPLOY == 'yes' &&  env.DEV == 'yes')
+    - name: DEPLOY - Prod
+      if:  (env.DEPLOY == 'yes')
       run: |
         pwd
-        sudo mv index-dev.js index.js 
+        sudo mv index-prod.js index.js 
         sudo node index.js
-        
-        
-    #- name: DEPLOY - Prod
-    #  if:  (env.DEPLOY == 'yes' && env.PROD == 'yes' )
-    #  run: |
-    #    pwd
-    #    sudo mv index-prod.js index.js 
-    #    sudo node index.js
