--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -52,7 +52,53 @@ jobs:
         pwd
         sudo mv index-dev.js index.js 
         sudo node index.js
+  
+  stag:
+    if: ${{ always() }}
+    needs: [dev]
+    name: AWS-SDK-JS-V3-Deploy-CFN-Stg
+    runs-on: ubuntu-latest
+    environment: development
+    env:
+      DEPLOY: 'no'
+      SDK_INIT_DIRECTORY: 'init'
+      BASE_DIRECTORY: '/home/runner/work'
+      REPO_NAME: ${{ github.event.repository.name }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    defaults:
+      run:
+        shell: bash
+ 
+    steps:
+    - uses: actions/checkout@v2
+      # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
+      
+    - name: Install Node.js & CFN-Client-V3 Module
+      run: |
+        # install
+        sudo apt-get -y update
+        curl -fsSL https://deb.nodesource.com/setup_19.x | sudo -E bash -
+        sudo apt-get install -y nodejs
+        sudo npm install  --prefix $BASE_DIRECTORY/$REPO_NAME/$REPO_NAME @aws-sdk/client-cloudformation
         
+        # check versions & show directory's contents and details
+        pwd
+        sudo node -v
+        sudo npm -v
+        sudo npm ls
+        sudo df -h
+        sudo free -h 
+        sudo ls -ltr
+        
+    - name: DEPLOY - Stag
+      if:  (env.DEPLOY == 'yes')
+      run: |
+        pwd
+        sudo mv index-stag.js index.js 
+        sudo node index.js
         
   prod:
     if: ${{ always() }}
@@ -101,3 +147,24 @@ jobs:
         sudo mv index-prod.js index.js 
         sudo node index.js
         
+  end:
+    if: ${{ always() }}
+    needs: [stag, prod]
+    name: AWS-SDK-JS-V3-Deploy-CFN-End
+    runs-on: ubuntu-latest
+    environment: ending
+    env:
+      DEPLOY: 'yes'
+    defaults:
+      run:
+        shell: bash
+ 
+    steps:
+    - uses: actions/checkout@v2
+      # note: checkout directory: /home/runner/work/${repo-name}/$${repo-name}
+      
+    - name: DEPLOY - End
+      if:  (env.DEPLOY == 'yes')
+      run: |
+        pwd
+        echo Enf of Deployment
