--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -6,7 +6,8 @@ on:
     - main
   pull_request:
    # matches pull request for all branches and tag names
-   
+  [workflow_dispatch]:
+
 jobs:
   dev:
     name: Deploy-CFN-Dev
