--- a/.github/workflows/deploy-cfn.yml
+++ b/.github/workflows/deploy-cfn.yml
@@ -1,6 +1,6 @@
 name: CI - AWS-SDK-JS-V3 Deploy CFN
 
-# option 1: Auto Workflow
+# Option 1: Auto Workflow
 #on: 
   # option 1: Auto Workflow
   #push:
@@ -9,13 +9,14 @@ name: CI - AWS-SDK-JS-V3 Deploy CFN
   # pull_request:
   # matches pull request for all branches and tag names
   
-# option 2: Manual Workflow
-on: [workflow_dispatch]:
-  inputs:
-    version:
-      description: AWS-SDK-JS V3 CFN Deployment
-      version: 2.0
-      required: true
+# Option 2: Manual Workflow
+on: 
+  [workflow_dispatch]:
+    inputs:
+      version:
+        description: AWS-SDK-JS V3 CFN Deployment
+        default: 2.0
+        required: true
 
 jobs:
   dev:
